# bi-costs-calculator

./: .gitignore  Makefile  README.md  docker-compose.yaml  dot_env_sample  pyproject.toml
backend/: Dockerfile  requirements-simple.txt  requirements.txt
backend/shell/: entrypoint.sh
backend/source/products_prices/: manage.py
backend/source/products_prices/products/: admin.py  models.py  urls.py  views.py
backend/source/products_prices/products/migrations/: 0001_initial.py  0001_products_initial.py  0002_products_initial.py  0003_products_initial.py
backend/source/products_prices/products/templates/products/: back_office.html  calculated_prices.html  home.html  products_list.html
backend/source/products_prices/products/templates/products/components/: product_list_instructions.html
backend/source/products_prices/products_prices/: asgi.py  context_processors.py  urls.py  wsgi.py
backend/source/products_prices/products_prices/settings/: base.py  development.py  development_docker.py  development_local.py  development_pythonanywhere.py  production.py  secret_key.py
backend/source/products_prices/templates/: base.html
backend/source/products_prices/templates/products_prices/: base.html
backend/source/products_prices/templates/registration/: login.html  signup.html
docs/: BR.md  TD.md
nginx/: Dockerfile  backend.local  nginx.conf
scripts/: code-linter.sh
