[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Raul Tavares <rtavarres+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
django = "^5.0.6"
mypy = "^1.11.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
sentry-sdk = {extras = ["django"], version = "^2.10.0"}
django-debug-toolbar = "^4.4.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.0"
pylint = "^3.2.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
